🧵 Login authentication cookie expires after a dauy

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,9 +1,16 @@
 ﻿@inherits LayoutComponentBase
 
-@Body
+<div class="fill map">
+    <div class="h-25">
+        <NavMenu />
+    </div>
+    <article class="fill map"> @Body</article>
+
+</div>
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+    
