--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -69,7 +69,7 @@ h1 {
 }
 
 .form-control {
-    font-family: 'B612 Mono', monospace;
+    font-family: 'B612 Mono' !important;
     color: var(--user-black);
-    font-size: 20px;
+    font-size: 13px !important;
 }
