--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -11,28 +11,52 @@
             <NotAuthorized>
                 <div class=nav-item px-3">
                     <a href="/" class="@GetActiveClass("/")">
-                        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Customers
+                        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
                     </a>
                 </div>
 
                 <div class="nav-item px-3">
+                    <a href="Account/Login" class="@GetActiveClass("/AddClient")">
+                        <span aria-hidden="true"></span> Login
+                    </a>
+                </div>
+
+            </NotAuthorized>
+            <Authorized>
+                <div class="nav-item">
+                    <a href="/" class="@GetActiveClass("/")">
+                        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                    </a>
+                </div>
+
+
+                <div class="nav-item">
+                    <a href="/Customers" class="@GetActiveClass("/Customers")">
+                        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Customers
+                    </a>
+                </div>
+
+                <div class="nav-item">
                     <a href="/Tokens" class="@GetActiveClass("/Tokens")">
                         <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Tokens
                     </a>
                 </div>
 
-                <div class="nav-item px-3">
+                <div class="nav-item">
                     <a href="/Devices" class="@GetActiveClass("/Devices")">
                         <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Devices
                     </a>
                 </div>
 
-
-            </NotAuthorized>
-            <Authorized>
-                <div class="nav-item px-3">
+                <div class="nav-item">
                     <a href="/AddClient" class="@GetActiveClass("/AddClient")">
                         <span aria-hidden="true"></span> Add / Upload
+                    </a>
+                </div>
+
+                <div class="nav-item">
+                    <a href="/Account/Logout" class="@GetActiveClass("/AddClient")">
+                        <span aria-hidden="true"></span> Logout
                     </a>
                 </div>
             </Authorized>
