--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -42,7 +42,12 @@ h1 {
 
 .flex-col {
     display: flex;
-    flex-direction: column
+    flex-direction: column;
+}
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
 }
 
 .flex-center {
