--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -54,8 +54,8 @@
                     </a>
                 </div>
 
-                <div class="nav-item">
-                    <a href="/Account/Logout" class="@GetActiveClass("/AddClient")">
+                <div class="nav-item" style="justify-items:end; margin-left: auto;">
+                    <a href="/Account/Logout" class="@GetActiveClass("/Account/Logout")" style="margin-left: auto;">
                         <span aria-hidden="true"></span> Logout
                     </a>
                 </div>
