--- a/Components/DynamicTables/DynamicTable.razor
+++ b/Components/DynamicTables/DynamicTable.razor
@@ -74,7 +74,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Data)
+            @foreach (var item in Data.AsEnumerable().Reverse())
             {
                 <tr>
                     @foreach (var columnName in ColumnNames)
