--- a/Components/Pages/Devices.razor
+++ b/Components/Pages/Devices.razor
@@ -17,10 +17,17 @@
 	<p style="padding-left: 10px;"> You can add device and customer relations and view existing devices on this page. </p>
 </div>
 <div class="flex-center p-h1">
-	<div class="flex-center-w flex-column" style="width: 100%;">
-		<div class=" dynamic-query-fill m-2 p-3">
-			<h2> Add New Customer Device Relation </h2>
-			<InsertCustomerDeviceQuery DatabaseContext="@DbContext" />
+	<div class="flex-column" style="width: 100%;">
+		<div class="flex-row m-2" style="justify-content:center; gap: 1rem;">
+            <div class="dynamic-query-fill p-2" style="width: 100%;">
+                <h2> Add New Device </h2>
+                <InsertDeviceQuery DatabaseContext="@DbContext"/>
+            </div>
+            <div class="dynamic-query-fill p-2 mr-1" style="width: 100%;">
+                <h2> Add New Customer Device Relation </h2>
+                <InsertCustomerDeviceQuery DatabaseContext="@DbContext" />
+            </div>
+
 		</div>
 
 		<div class="m-2 p-3 dynamic-query-fill ">
