🎨 Now every button doesn't "insert" an apk

--- a/Components/DynamicTables/Inserts/InsertAPKQuery.razor
+++ b/Components/DynamicTables/Inserts/InsertAPKQuery.razor
@@ -15,7 +15,7 @@
         <div class="flex-row">
             <input type="text" class="form-control m-1" placeholder="Device Code" @bind-value="@InputDeviceCode" />
             <input type="text" class="form-control m-1" placeholder="Token Value" @bind-value="@InputTokenValue" />
-            <input type="button" value="Insert APK" class="btn m-1" style="background-color: var(--user-grey)" @onclick="InsertAPKInfoAsync" />
+            <input type="button" value="Upload APK" class="btn m-1" style="background-color: var(--user-grey)" @onclick="InsertAPKInfoAsync" />
         </div>
         </div>
 
