--- a/Components/DynamicTables/Inserts/InsertCustomerDeviceQuery.razor
+++ b/Components/DynamicTables/Inserts/InsertCustomerDeviceQuery.razor
@@ -20,7 +20,7 @@
 
         </div>
         <div class="flex-row">
-            <input type="button" value="Insert APK" class="btn m-1" style="background-color: var(--user-grey)" @onclick="InsertCustomerInfoAsync" />
+            <input type="button" value="Add Customer-Device Relation" class="btn m-1" style="background-color: var(--user-grey)" @onclick="InsertCustomerInfoAsync" />
         </div>
     </div>
 
