--- a/Components/DynamicTables/Inserts/InsertCustomerQuery.razor
+++ b/Components/DynamicTables/Inserts/InsertCustomerQuery.razor
@@ -11,7 +11,7 @@
         </div>
         <div class="flex-row">
             <input type="text" class="form-control m-1" placeholder="Customer Note" @bind-value="@InputCustomerNote" />
-            <input type="button" value="Insert APK" class="btn m-1" style="background-color: var(--user-grey)" @onclick="InsertCustomerInfoAsync" />
+            <input type="button" value="Add Customer" class="btn m-1" style="background-color: var(--user-grey)" @onclick="InsertCustomerInfoAsync" />
         </div>
         </div>
 
