--- a/Components/DynamicTables/Inserts/InsertTokenQuery.razor
+++ b/Components/DynamicTables/Inserts/InsertTokenQuery.razor
@@ -11,7 +11,7 @@
         </div>
         <div class="flex-row">
             <input type="datetime-local" class="form-control m-1" placeholder="Token Expiry (leave empty for none)" @bind-value="@InputTokenExpiry" min=@DateTime.Now />
-            <input type="button" value="Insert APK" class="btn m-1" style="background-color: var(--user-grey)" @onclick="InsertTokenInfoAsync" />
+            <input type="button" value="Create Token" class="btn m-1" style="background-color: var(--user-grey)" @onclick="InsertTokenInfoAsync" />
         </div>
         </div>
 
